--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+margin: 3rem;
+background-color: #252525;
+color: pink;
+font-family: 'Kanit', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h2 {
+  text-align: center;
+}
+
+hr {
+  width: 60%;
+  color: pink;
+}
+
+.App {
+  margin: 1rem;
+  width: 25vw;
+  height: 33vh;
+  border: 1px solid pink;
+  border-radius: 1rem;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+p {
+  margin: .5rem;
+}
+
+button {
+  background-color: rgb(103, 246, 103);
+  border: 1px solid #333;
+  padding: 4px;
+  width: 27px;
+  margin: .3rem;
 }
